--- a/AI visualization/hmm-react-app/public/index.html
+++ b/AI visualization/hmm-react-app/public/index.html
@@ -28,5 +28,33 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+
+
+    <!-- The core Firebase JS SDK is always required and must be listed first -->
+    <script src="https://www.gstatic.com/firebasejs/7.24.0/firebase-app.js"></script>
+
+    <!-- TODO: Add SDKs for Firebase products that you want to use
+        https://firebase.google.com/docs/web/setup#available-libraries -->
+    <script src="https://www.gstatic.com/firebasejs/7.24.0/firebase-analytics.js"></script>
+
+    <script>
+        // Your web app's Firebase configuration
+        // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+        const firebase = require('firebase');
+        const firebaseConfig = {
+            apiKey: "AIzaSyBDVy9xvM6tslYN6BDrMqTBS2CmG193tQI",
+            authDomain: "learn-ai-7df72.firebaseapp.com",
+            databaseURL: "https://learn-ai-7df72.firebaseio.com",
+            projectId: "learn-ai-7df72",
+            storageBucket: "learn-ai-7df72.appspot.com",
+            messagingSenderId: "678683641339",
+            appId: "1:678683641339:web:05d63f86682a595592375e",
+            measurementId: "G-58TJ8ZGLRJ"
+        };
+
+        // Initialize Firebase
+        firebase.initializeApp(firebaseConfig);
+        firebase.analytics();
+    </script>
   </body>
 </html>
