--- a/AI visualization/hmm-react-app/public/index.html
+++ b/AI visualization/hmm-react-app/public/index.html
@@ -36,25 +36,6 @@
     <!-- TODO: Add SDKs for Firebase products that you want to use
         https://firebase.google.com/docs/web/setup#available-libraries -->
     <script src="https://www.gstatic.com/firebasejs/7.24.0/firebase-analytics.js"></script>
-
-    <script>
-        // Your web app's Firebase configuration
-        // For Firebase JS SDK v7.20.0 and later, measurementId is optional
-        const firebase = require('firebase');
-        const firebaseConfig = {
-            apiKey: "AIzaSyBDVy9xvM6tslYN6BDrMqTBS2CmG193tQI",
-            authDomain: "learn-ai-7df72.firebaseapp.com",
-            databaseURL: "https://learn-ai-7df72.firebaseio.com",
-            projectId: "learn-ai-7df72",
-            storageBucket: "learn-ai-7df72.appspot.com",
-            messagingSenderId: "678683641339",
-            appId: "1:678683641339:web:05d63f86682a595592375e",
-            measurementId: "G-58TJ8ZGLRJ"
-        };
-
-        // Initialize Firebase
-        firebase.initializeApp(firebaseConfig);
-        firebase.analytics();
-    </script>
+    <script async src="https://www.googletagmanager.com/gtag/js"></script>
   </body>
 </html>
