--- a/AI visualization/hmm-react-app/public/index.html
+++ b/AI visualization/hmm-react-app/public/index.html
@@ -3,15 +3,12 @@
   <head>
     <meta charset="utf-8" />
 
-    <!-- Tab icon -->
-    <link rel="apple-touch-icon" sizes="180x180" href="public/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="public/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="public/favicon-16x16.png">
-    <link rel="manifest" href="public/site.webmanifest">
-    <link rel="mask-icon" href="public/safari-pinned-tab.svg" color="#43afca">
-    <meta name="msapplication-TileColor" content="#b91d47">
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
+    <meta name="msapplication-TileColor" content="#da532c">
     <meta name="theme-color" content="#ffffff">
-    <!-- -------- -->
 
     <title>Learn HMM</title>
   </head>
